--- a/Win32AStar/Win32AStar/Win32AStar.vcxproj.filters
+++ b/Win32AStar/Win32AStar/Win32AStar.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="AStar.h">
       <Filter>소스 파일</Filter>
     </ClInclude>
+    <ClInclude Include="JPS.h">
+      <Filter>소스 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -42,6 +45,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="AStar.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="JPS.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
